--- a/templates/index.html
+++ b/templates/index.html
@@ -35,40 +35,145 @@
 {
     display: none;
 }
+#modal
+{
+    display: none;
+    position: absolute;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    opacity: .7;
+    background-color: black;
+    color: white;
+}
+#prompt
+{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.2em;
+}
+#prompt > div:hover
+{
+    border: orangered 2px solid;
+    border-radius: 5px;
+    padding: 5px;
+}
+#prompt div div:last-child
+{
+    margin-left: 46%;
+}
+#prompt button
+{
+    transform: scale(1.5);
+}
+/*****************/
+#game
+{
+    height: 100vh;
+    width: 100vw;
+}
+#pName
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#deck
+{
+    padding: 3em 2em;
+    border-radius: 5px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+     -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+#deck:hover
+{
+    border: black 2px solid;
+}
+#p1
+{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    /*
+    border: 2px solid black;
+    */
+}
+#p2
+{
+    position: absolute;
+    top: 0;
+    left: 50%;
+}
+#p3
+{
+    position: absolute;
+    top:50%;
+    left: 0;
+}
+#p4
+{
+    position: absolute;
+    top: 50%;
+    right: 0;
+}
 </style>
 <body>
-<div id="menu">
-        <div id="panel">
-            <div id="fields">
-                <input id="room" type="text" maxlength="4" autofocus placeholder="Roomname">
-                <br />
-                <input id="name" type="text" placeholder="Name">
+<div id="modal">
+    <div id="prompt">
+        <div>
+            <div>
+                <h2>Start Game?</h2>
             </div>
-            <div id="options">
-                <button onclick="join(1)">Join Game</button>
-                <br />
-                <button onclick="join(2)">Create</button>
+            <div>
+                <button onclick=start()>Yes</button>
             </div>
         </div>
     </div>
+</div>
+<div id="menu">
+    <div id="panel">
+        <div id="fields">
+            <input id="room" type="text" maxlength="4" autofocus placeholder="Roomname">
+            <br />
+            <input id="name" type="text" placeholder="Name">
+        </div>
+        <div id="options">
+            <button onclick="join(1)">Join Game</button>
+            <br />
+            <button onclick="join(2)">Create</button>
+        </div>
+    </div>
+</div>
     <div id="game" class="hide">
         <h3 id="pName">#name</h3>
-        <div id="foes">
-            <div id="p2">
-
-            </div>
-            <div id="p4">
-
-            </div>
-            <div id="p3">
-                
-            </div>
-        </div>
-        <div id="deck">Deck</div>
         <div id="p1">
+            p1
             <div id="stacks"></div>
             <div id="myHand"></div>
         </div>
+        <div id="p2">
+            p2
+        </div>
+        <div id="p4">
+            p4
+        </div>
+        <div id="p3">
+            p3
+        </div>
+        <div id="deck">Deck</div>
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
@@ -77,13 +182,15 @@
 <!-- <script type="text/javascript" src="{{ url_for('static', filename='game.js')}}"></script>
 -->
 <script>
-    let myPlayer = null
-    var socket = io();
+    let myPlayer=null
+    var socket=io();
 
-    let menu = document.getElementById('menu')
-    let game = document.getElementById('game')
+    let menu=document.getElementById('menu')
+    let game=document.getElementById('game')
+    let modal=document.getElementById('modal')
 
-    let pname = document.getElementById('pName')
+    let pname=document.getElementById('pName')
+    let pCount=0
 
     function join(code)
     {
@@ -111,14 +218,26 @@
 
     socket.on('joined', function (data) 
     {
-        console.log(data)
+        //console.log(data)
         menu.remove()
         game.classList.remove('hide');
         pname.innerHTML=data.player
+        pCount++
+
+        if(pCount>2)
+        {
+            modal.style.display='block'
+        }
     })
 
     socket.on('err', function (data) {
         alert(data.mess)
     })
+    //########################
+    function start()
+    {
+        modal.style.display='none'
+        socket.emit('start',{})
+    }
 </script>
 </html>
